--- a/ClearScript/ClearScript.csproj
+++ b/ClearScript/ClearScript.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HtmlAgilityPack.Core\HtmlAgilityPack.Core.csproj" />
+  </ItemGroup>
+
 </Project>
