--- a/Redis/Redis.csproj
+++ b/Redis/Redis.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Tools\R5\**" />
+    <Content Remove="Tools\R5\**" />
+    <EmbeddedResource Remove="Tools\R5\**" />
+    <None Remove="Tools\R5\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="5.0.9" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.62" />
@@ -13,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Tools\" />
     <Folder Include="wwwroot\dist\" />
   </ItemGroup>
 
