--- a/PDF2Image/PDF2Image.csproj
+++ b/PDF2Image/PDF2Image.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.5" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.5" />
+    <PackageReference Include="Tesseract" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,6 +37,11 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\dist\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\tessdata\eng.traineddata" />
+    <None Include="wwwroot\tessdata\vie.traineddata" />
   </ItemGroup>
 
 </Project>
