--- a/PDF2Image/appsettings.json
+++ b/PDF2Image/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AppSetting": {
+    "Raw": {
+      "Password": "85C22B59DC8F0C47C5AD09BD876C167F",
+      "Dir1": "d:\\book-raw\\",
+      "Dir2": "c:\\book-raw\\"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
