--- a/PDF2Image/PDF2Image.csproj
+++ b/PDF2Image/PDF2Image.csproj
@@ -13,6 +13,8 @@
     <Compile Remove="Accord.NET\ImageProcessing.cs" />
     <Compile Remove="Accord.NET\Ocr.cs" />
     <Compile Remove="Accord.NET\TextAreaFilter.cs" />
+    <Compile Remove="Controllers\FileController.cs" />
+    <Compile Remove="Controllers\OcrController.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,11 +31,13 @@
   <ItemGroup>
     <PackageReference Include="Accord.Imaging" Version="3.8.0" />
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+    <PackageReference Include="K4os.Compression.LZ4" Version="1.2.12" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="5.0.9" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
     <PackageReference Include="OpenCvSharp4" Version="4.5.3.20210817" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.5.3.20210817" />
+    <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.5" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.5" />
