--- a/Redis/appsettings.json
+++ b/Redis/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Redis": {
-    "ConnectString": "103.130.215.181:{0},allowAdmin=true,abortConnect=false,defaultDatabase=15,syncTimeout=5000",
+    "ConnectString": "103.130.215.181:{0},allowAdmin=true,abortConnect=false,defaultDatabase={1},syncTimeout=5000",
+    "Database": 9,
     "PortMaster": 1000,
     "PortRead1": 1001,
     "PortRead2": 1002,
