--- a/PDF2Image/PDF2Image.csproj
+++ b/PDF2Image/PDF2Image.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.5.3.20210817" />
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.3" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.62" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.5" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.5" />
     <PackageReference Include="Tesseract" Version="4.1.1" />
