--- a/PDF2Image/appsettings.json
+++ b/PDF2Image/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Redis": {
+    "ConnectString": "127.0.0.1:{0},allowAdmin=true,abortConnect=false,defaultDatabase={1},syncTimeout=5000",
+    "Database": 9,
+    "PortMaster": 1000,
+    "PortRead1": 1001,
+    "PortRead2": 1001,
+    "PortRead3": 1001
+  },
   "AppSetting": {
     "Raw": {
       "Password": "85C22B59DC8F0C47C5AD09BD876C167F",
