--- a/PDF2Image/appsettings.Production.json
+++ b/PDF2Image/appsettings.Production.json
@@ -1,7 +1,7 @@
-{
+﻿{
   "Redis": {
     "ConnectString": "127.0.0.1:{0},allowAdmin=true,abortConnect=false,defaultDatabase={1},syncTimeout=5000",
-    "Database": 4,
+    "Database": 9,
     "PortMaster": 1000,
     "PortRead1": 1001,
     "PortRead2": 1001,
@@ -10,7 +10,7 @@
   "AppSetting": {
     "Raw": {
       "Password": "85C22B59DC8F0C47C5AD09BD876C167F",
-      "Dir1": "d:\\book-raw-dev\\",
+      "Dir1": "d:\\book-raw\\",
       "Dir2": "c:\\book-raw\\"
     }
   },
