--- a/PDF2Image/PDF2Image.csproj
+++ b/PDF2Image/PDF2Image.csproj
@@ -7,14 +7,17 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
-
+  
+  <PropertyGroup>
+    <DocnetRuntime Condition=" '$([MSBuild]::IsOsPlatform(Windows))' ">win-x64</DocnetRuntime>
+  </PropertyGroup>
+  
   <ItemGroup>
     <Compile Remove="Accord.NET\Class.cs" />
     <Compile Remove="Accord.NET\ImageProcessing.cs" />
     <Compile Remove="Accord.NET\Ocr.cs" />
     <Compile Remove="Accord.NET\TextAreaFilter.cs" />
-    <Compile Remove="Controllers\FileController.cs" />
-    <Compile Remove="Controllers\OcrController.cs" />
+    <Compile Remove="Controllers\FileController - Copy.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,11 +33,9 @@
 
   <ItemGroup>
     <PackageReference Include="Accord.Imaging" Version="3.8.0" />
-    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
-    <PackageReference Include="K4os.Compression.LZ4" Version="1.2.12" />
+    <PackageReference Include="Docnet.Core" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="5.0.9" />
-    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
     <PackageReference Include="OpenCvSharp4" Version="4.5.3.20210817" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.5.3.20210817" />
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
@@ -46,7 +47,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PdfLibCore\PdfLibCore.csproj" />
     <ProjectReference Include="..\TTCore.WebPImage\TTCore.WebPImage.csproj" />
   </ItemGroup>
 
