--- a/Driver/appsettings.Production.json
+++ b/Driver/appsettings.Production.json
@@ -14,6 +14,14 @@
       "Dir2": "c:\\book-raw\\"
     }
   },
+  "Driver": {
+    "token_active": "thinhifis",
+    "thinhifis": {
+      "app_name": "Ocr-Image-Driver-Vision",
+      "client_id": "1061643460639-d3coe5ul3sjphh4phch7sikv4uvo3ukl.apps.googleusercontent.com",
+      "client_secret": "_0GX1nrHJxk9uc6Q-E-4sfh5"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
