--- a/Driver/Properties/launchSettings.json
+++ b/Driver/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7879",
+      "applicationUrl": "http://192.168.1.4:7879",
       "sslPort": 0
     }
   },
