--- a/Driver/bundleconfig.json
+++ b/Driver/bundleconfig.json
@@ -6,7 +6,7 @@
       "wwwroot/lib/js/msgpack5.min.js",
       "wwwroot/lib/js/dist/browser/signalr-protocol-msgpack.min.js",
       "wwwroot/lib/js/vue.min.js",
-      "wwwroot/lib/js/underscore-min.js",
+      "wwwroot/lib/js/lodash.min.js",
       "wwwroot/lib/js/zepto.min.js"
     ],
     "minify": {
